<resources>
    <string name="app_name">everyday-diary</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="permissionMsg">접근 권한이 필요합니다</string>
    <string name="permissionDenied">권한 설정 없이 이용이 불가합니다</string>
    <string name="string_sign_up">Sign Up</string>
    <string name="string_sign_in">Sign In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_welcome">Welcome</string>
    <string name="string_hint_email">Email address</string>
    <string name="string_hint_password">Password</string>
    <string name="test">TEST</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="string_set">Set</string>
    <string name="string_hint_password_again">Password again</string>
    <string name="string_information">Enter your information below</string>
    <string name="string_hello">Hello</string>
</resources>
