<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:elevation="10dp"
            android:background="@drawable/custom_dialog_background">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/test"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/text_ok"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/dialog_button"
                    android:gravity="center"
                    android:text="@string/ok"
                    android:textColor="#2167E0"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_cancel"
                    app:layout_constraintTop_toTopOf="parent"
                    android:clickable="true"/>

                <TextView
                    android:id="@+id/text_cancel"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:background="@drawable/dialog_button"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="#2167E0"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/text_ok"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:clickable="true"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>