<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.everyday_diary.ui.login.LoginFragmentViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/holder_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="80dp">


                <TextView
                    android:id="@+id/text_view_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/string_welcome"
                    android:textColor="#b3312f36"
                    android:textSize="34sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <EditText
                    android:id="@+id/edit_text_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/string_hint_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:text="@={vm.id}"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_welcome" />

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="35dp"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/string_hint_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:text="@={vm.pw}"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_id" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="#f2f1f4"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/holder_edit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/button_login"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_anchor="@+id/holder_edit"
            app:layout_anchorGravity="bottom|end"
            android:layout_marginEnd="30dp"
            android:background="@drawable/login_button_background"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:src="@drawable/ic_execute"
            android:onClick="@{() -> vm.login()}" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>